# devourer

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: canary-diff-tests.yml  cmake-multi-platform.yml  precoder-tests.yml
demo/: main.cpp
docs/: 8814-port-audit.md  8822e-quirks.md  8852c-quirks.md  ack-txreport.md  adapter-doctor.md  adaptive-channel-migration.md  adaptive-link-building-blocks.md  adaptive-link-validation.md  adaptive-link.md  aggregation.md  ap-mode.md  beacon-grant.md  beamforming-self-sounding.md  beamforming-victim-sensing.md  bench-testing-near-field.md  channel-migration-protocol.md  channel-migration-validation.md  dl-departure.md  driver-primer.md  dwell1-ab-injection.md  effective-branches-rotation.md  fhss.md  frequency-hopping.md  fused-fec.md  he-extended-range.md  he-trigger-ul.md  jaguar3-bringup.md  jammer-resilience.md  kernel-channel-switch-baseline.md  kernel-channel-switch-offload.md  la-capture.md  logging.md  mcc-fcs-investigation.md  measuring-spatial-diversity.md  multi-ap-cellular.md  narrowband.md  performance-tuning.md  pseudo-preamble-puncturing.md  rf-primer.md  rx-spectrum-sensing.md  (+6 more)
docs/experiments/: dwell1-ab-injection.md  kernel-channel-switch-baseline.md  n-channel-hopping.md
examples/chanmig/: main.cpp
examples/chanscout/: main.cpp
examples/common/: BfReportDetect.h  caps_event.h  env_config.cpp  env_config.h  stream_stdin.h  stream_stdin_selftest.cpp  usb_select.cpp  usb_select.h
examples/doctor/: main.cpp
examples/duplex/: main.cpp
examples/dwelltx/: main.cpp
examples/kestrelprobe/: main.cpp
examples/pcieprobe/: main.cpp
examples/precoder/: main.cpp
examples/rx/: main.cpp
examples/sense/: README.md  bf_report_decode_selftest.cpp  main.cpp
examples/streamtx/: main.cpp
examples/svctx/: main.cpp  svc_tx.h
examples/tdma/: main.cpp  tdma.h
examples/timesync/: main.cpp  timesync.h
examples/tx/: main.cpp
examples/txpower/: main.cpp
hal/: Hal8812a_PhyRegPg.h  Hal8812a_TxPwrTrack.cpp  Hal8812a_TxPwrTrack.h  Hal8812a_TxpwrLmt.h  Hal8814PwrSeq.c  Hal8814_PostFwdlReplay.h  Hal8821PhyReg.h  HalVerDef.h  basic_types.h  drv_types.h  hal8812a_fw.c  hal8814a_fw.c  hal8821a_fw.c  hal8821c_fw.c  hal8821c_fw.h  hal8822b_fw.c  hal8822b_fw.h  hal8822c_fw.c  hal8822c_fw.h  hal8822e_fw.c  hal8822e_fw.h  hal8852b_fw.h  hal8852b_phy.c  hal8852b_phy.h  hal8852c_fw.h  hal8852c_phy.c  hal8852c_phy.h  rtl8812a_hal.h  rtl8812a_spec.h  rtw_efuse.h
hal/halbb/: hal_headers_le.h
hal/halrf/: hal_headers_le.h
hal/rtl8814a/: rtl8814a_cmd.c
inventory/: cf938ac_macos.txt
reference/: README.md
src/: AckResponder.h  AdapterCaps.h  AdapterHealth.h  AmpduMode.h  BeamformingSounder.h  BfReportDecode.h  BfReportDetect.h  CfoTracker.h  ChannelFreq.h  DeviceConfig.h  EepromManager.cpp  EepromManager.h  Event.h  Firmware.h  FirmwareManager.cpp  FirmwareManager.h  FrameParser.cpp  FrameParser.h  HalModule.cpp  HalModule.h  HalmacCfgParam.cpp  HalmacCfgParam.h  HopProf.h  HopSchedule.h  IRtlDevice.h  InitTimer.h  Iqk8812a.cpp  Iqk8814a.cpp  LaCapture.cpp  LaCapture.h  LinkHealth.cpp  LinkHealth.h  NhmReader.h  NoiseFloorMath.h  ParsedRadioPacket.h  PcieTransport.cpp  PcieTransport.h  PhyTableLoader.cpp  PhydmWatchdog.cpp  PhydmWatchdog.h  (+53 more)
src/cell/: UeRxAttribution.h
src/chanmig/: ActiveLink.h  ChannelDef.h  ChannelEvents.h  ChannelScore.cpp  ChannelScore.h  EvidenceStore.h  JsonlLite.h  MigClock.h  MigConfig.h  MigGate.cpp  (+9 more)
tests/: 8821cu_hwtest.sh  README.md  ack_responder_check.sh  ack_txreport_analyze.py  ack_txreport_matrix.sh  adapter_caps_probe.sh  adapter_caps_selftest.cpp  adapter_doctor_cold.sh  adapter_health_selftest.cpp  adaptive_onair.sh  aircrack-ng-88XXau-siocdevprivate.patch  ampdu_ba_check.sh  ampdu_onair_ab.sh  ampdu_pacing_sweep.sh  ampdu_spike.sh  antenna_decorrelation.py  ap_ping_demo.sh  ap_responder.cpp  ap_wpa2.cpp  ap_wpa2_demo.sh  au8814_5g_baseline.sh  au8814_dual_soak.sh  beacon_fullbody.cpp  beacon_interval_shift.sh  beacon_kernel_scan.sh  beacon_steer_check.cpp  beacon_steer_survival.sh  beacon_tbtt.cpp  beacon_ts_check.cpp  beacon_update_analyze.py  beacon_update_check.sh  beacon_update_probe.cpp  beacon_wire_check.cpp  bench_8812au_row.sh  bench_init.py  bench_onair.py  bench_tput.py  bf_ndpa_onair.sh  bf_ndpa_probe.py  bf_report_sniff.sh  (+304 more)
tests/pcie_phc/: Makefile  README.md  pcie_phc_lat.c  ptp_crosscheck.sh  rtl8821ce_phc.c  rtw88_rx_hwtstamp.patch  validate.sh
tools/: agc_gif.py  bf_constellation_gif.py  bf_report_decode.py  bf_sequence_gif.py  bf_waterfall.py  bf_waterfall_gif.py  bf_waterfall_svg.py  canary_kernel_dump.sh  chanmig_dash.py  channel_tune_gif.py  chip_anatomy_gif.py  chip_identity_gif.py  coex_gif.py  constellation_gif.py  dig_loop_gif.py  efuse_map_gif.py  extract_8814a_phy_tables.py  extract_8821c_fw.py  extract_8821c_txpwr_lmt.py  extract_8822b_fw.py  extract_8822b_txpwr_lmt.py  extract_8822c_iqk_nctl.py  extract_8822c_phy_tables.py  extract_8822e_fw.py  extract_8852b_fw.py  extract_8852b_phy.py  extract_8852c_fw.py  extract_8852c_phy.py  fwdl_gif.py  h2c_c2h_gif.py  hop_pattern_gif.py  la_csi.py  la_decode.py  lssi_rf_windows_gif.py  mac_journey_gif.py  monitor_style.py  mrc_diversity_gif.py  nhm_histogram_gif.py  ofdm_anatomy_gif.py  pcapng_to_urbscript.py  (+16 more)
tools/precoder/: .gitignore  README.md  _swif_build.py  adaptive_link.py  beamsteer_feasibility_sim.py  chain_count_energy_sim.py  controller.py  corruption_analysis.py  corruption_survey.py  csi_dump.py  encode_subcarriers.py  energy_model.py  fec_ab_sim.py  fec_fusion_sim.py  fec_subblock.py  fft_capture.py  fused_fec_link.py  fused_fec_rx.py  fused_fec_tx.py  hop_diversity_sim.py  hop_rx_combine.py  link_model.py  mcs_probe_ab_sim.py  op_table.py  pyproject.toml  rc_proto.py  rendezvous.py  score.py  seed_probe.py  soft_erasure_fec.py  space_freq_diversity_sim.py  spatial_sbi_sim.py  stream.py  stream_fec.py  stream_fec_raptorq.py  stream_fec_rlc.py  stream_fec_rs.py  stream_rx.py  stream_tx.py  svc_pipeline.py  (+30 more)
txdemo/: main.cpp  stream_stdin.h  stream_stdin_selftest.cpp
(+147 files in other folders)
